assets/css/menu.css
.site-header{
    position: sticky;
    top: 0;
    background-color: var(--color-preto);
    border-bottom: 0.1rem solid var(--linha); 
}

.navbar{
    min-height: 7rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 2rem;
}

.logo{
    flex: 0 0 auto;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.logo img{
    width: 4.4rem;
    height: auto;
    object-fit: contain;
    margin: 0 2rem;
}

.navbar-links{
    display: flex;
    align-items: center;
    gap: 0.4rem;
    list-style: none;
}

.navbar-links a{
    display: block;
    padding: 0.8rem 1.2rem;
    color: var(--text-color-segundaria);
    font-size: 1.4rem;
    font-weight: 600;
    border: 0.1rem solid var(--linha);
    border-radius: 100px;
    transition: 0.3s;
}

.navbar-links a:hover{
    transition: 0.3s;
    scale: 1.05;
    color: var(--color-branco);
    border-color: var(--linha);
    background: var(--color-azul-escuro);
}

.navbar-links a.active {
    color: var(--color-preto);
    border-color: var(--linha);
    background: var(--color-amarelo);
}

